[metadata]
name = helloworld
version = attr: helloworld.__version__
py_modules = helloworld
url = https://github.com/majorgear/helloworld
author = Major Gear
author_email = majorgear@majorgear.tech
description = Prints Hello World
long_description = long_description
long_description_content_type = text/markdown
classifiers =   
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only


[options]
packages = find:

[options.packages.find]
exclude = 
    tests*

[options.entry_points]
console_scripts = 
    helloworld-cli = helloworld.main:main
